--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive space website - Bedimcode</title>
+      <title>Muffiny.lol - Cool</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -27,18 +27,6 @@
                <ul class="nav__list">
                   <li class="nav__item">
                      <a href="#" class="nav__link">Home</a>
-                  </li>
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Features</a>
-                  </li>
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Pricing</a>
-                  </li>
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Contact</a>
                   </li>
                </ul>
 
