--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Muffiny.lol - Cool</title>
+      <title>Muffiny.lol - Home</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
