--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                   
                   <h1 class="home__title">
                      <span>
-                        Start Exploring <br>
-                        Infinite Space
+                         Muffiny.lol<br>
                      </span>
 
                      <img src="assets/img/line.svg" alt="">
