--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </li>
                </ul>
 
-               <a href="#" class="nav__button">Login</a>
+               <a href="#" class="nav__button">signout</a>
 
                <!-- Close button -->
                <div class="nav__close" id="nav-close">
