--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                   </h1>
 
                   <p class="home__description">
-                     Start your exploration in space, navigate 
-                     and discover all the wonders of the 
-                     universe.   
+                     Creativity 
                   </p>
 
                   <a href="#" class="home__button">
